tests/output/visual-evidence-20260401-072044/terminal-e2e-test-output.txt
bun test v1.3.9 (cf6cdbbb)

tests/terminal/e2e.test.ts:
 95 | 
 96 |         session.execute('echo "E2E Test Output"');
 97 |         await new Promise((r) => setTimeout(r, 500));
 98 | 
 99 |         const screen = vt.getScreen();
100 |         expect(screen).toContain("E2E Test Output");
                             ^
error: expect(received).toContain(expected)

Expected to contain: "E2E Test Output"
Received: ""

      at <anonymous> (/Users/luzi/code/chipilot-cli/chipilot/tests/terminal/e2e.test.ts:100:24)
(fail) Terminal E2E > VirtualTerminal + TerminalSession Integration > should render PTY output in VirtualTerminal [758.33ms]
251 |         if (cols <= 0 || rows <= 0 || isNaN(cols) || isNaN(rows) || cols === Infinity || rows === Infinity) {
252 |             throw new Error('resizing must be done using positive cols and rows');
253 |         }
254 |         var pixelWidth = (_a = pixelSize === null || pixelSize === void 0 ? void 0 : pixelSize.width) !== null && _a !== void 0 ? _a : 0;
255 |         var pixelHeight = (_b = pixelSize === null || pixelSize === void 0 ? void 0 : pixelSize.height) !== null && _b !== void 0 ? _b : 0;
256 |         pty.resize(this._fd, cols, rows, pixelWidth, pixelHeight);
                  ^
error: ioctl(2) failed, EBADF
      at <anonymous> (/Users/luzi/code/chipilot-cli/chipilot/node_modules/node-pty/lib/unixTerminal.js:256:13)
      at resize (/Users/luzi/code/chipilot-cli/chipilot/src/terminal/session.ts:84:23)
      at <anonymous> (/Users/luzi/code/chipilot-cli/chipilot/tests/terminal/e2e.test.ts:128:17)
(fail) Terminal E2E > VirtualTerminal + TerminalSession Integration > should handle terminal resize with PTY [206.88ms]
TerminalPane not yet implemented
194 |         // Use the variable
195 |         session.execute("echo $TEST_PERSIST");
196 |         await new Promise((r) => setTimeout(r, 300));
197 | 
198 |         const combined = outputs.join("");
199 |         expect(combined).toContain("hello");
                               ^
error: expect(received).toContain(expected)

Expected to contain: "hello"
Received: ""

      at <anonymous> (/Users/luzi/code/chipilot-cli/chipilot/tests/terminal/e2e.test.ts:199:26)
(fail) Terminal E2E > Terminal Session Persistence > should maintain session state across commands [805.37ms]
228 |         // Should show command not found error
229 |         expect(
230 |           combined.includes("not found") ||
231 |             combined.includes("command") ||
232 |             combined.length > 0
233 |         ).toBe(true);
                ^
error: expect(received).toBe(expected)

Expected: true
Received: false

      at <anonymous> (/Users/luzi/code/chipilot-cli/chipilot/tests/terminal/e2e.test.ts:233:11)
(fail) Terminal E2E > Terminal Error Handling > should handle command not found [706.16ms]

 5 pass
 1 skip
 4 fail
 11 expect() calls
Ran 10 tests across 1 file. [3.90s]
